[gd_scene load_steps=37 format=2]

[ext_resource path="res://scripts/ccontrol.gd" type="Script" id=1]
[ext_resource path="res://scenes/test_ai_miku.gd" type="Script" id=2]
[ext_resource path="res://ready_scene/models/character/rhea/rhea_spatial.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/tree.tscn" type="PackedScene" id=8]
[ext_resource path="res://images/gts_background.jpg" type="Texture" id=9]
[ext_resource path="res://scenes/layout/win.tscn" type="PackedScene" id=10]
[ext_resource path="res://images/pixiv.jpg" type="Texture" id=12]
[ext_resource path="res://newTiny.tscn" type="PackedScene" id=16]
[ext_resource path="res://newTiny.gd" type="Script" id=17]
[ext_resource path="res://scripts/Area.gd" type="Script" id=18]
[ext_resource path="res://scenes/layout/game_over.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/layout/score_root.tscn" type="PackedScene" id=20]
[ext_resource path="res://Timer.gd" type="Script" id=21]
[ext_resource path="res://scenes/loli.tscn" type="PackedScene" id=22]
[ext_resource path="res://fonts/font.tres" type="DynamicFont" id=23]
[ext_resource path="res://scripts/AI_test_Android/open_bag.gd" type="Script" id=24]
[ext_resource path="res://scenes/layout/bag_root.tscn" type="PackedScene" id=25]
[ext_resource path="res://scenes/layout/command.tscn" type="PackedScene" id=26]
[ext_resource path="res://piano.tscn" type="PackedScene" id=27]
[ext_resource path="res://piano_Area.gd" type="Script" id=28]
[ext_resource path="res://scenes/layout/zhunXin_root.tscn" type="PackedScene" id=29]
[ext_resource path="res://scenes/city_root.tscn" type="PackedScene" id=30]
[ext_resource path="res://scenes/base_block_root.tscn" type="PackedScene" id=31]
[ext_resource path="res://building.tscn" type="PackedScene" id=32]
[ext_resource path="res://scenes/sha_mo.tscn" type="PackedScene" id=33]
[ext_resource path="res://scripts/AI_test_Android/up.gd" type="Script" id=34]
[ext_resource path="res://fonts/xolonium/Xolonium.tres" type="DynamicFont" id=35]
[ext_resource path="res://scripts/AI_test_Android/grab.gd" type="Script" id=36]
[ext_resource path="res://assets/puhuiti-rgular-40.tres" type="DynamicFont" id=37]
[ext_resource path="res://sounds/level/Juhani Junkala [Chiptune Adventures] 1. Stage 1.ogg" type="AudioStream" id=38]

[sub_resource type="BoxShape" id=9]

[sub_resource type="BoxShape" id=10]
extents = Vector3( 81.1429, 0.388851, 101.077 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 20, 20, 20 )

[sub_resource type="ProceduralSky" id=7]

[sub_resource type="Environment" id=8]
background_mode = 2
background_sky = SubResource( 7 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.28794, 1, 0.215037 )

[node name="AI_test" type="Spatial"]
script = ExtResource( 1 )

[node name="Player" type="KinematicBody" parent="."]
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="Player"]

[node name="CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 0.996419, -0.0598502, 0.0597428, 0.0598501, -2.98023e-08, -0.998206, 0.0597429, 0.998209, 0.00358212, 0.769863, 2.14653, 0.141995 )
shape = SubResource( 9 )

[node name="rhea" parent="Player" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 3.72529e-09, 0, 1, 0, -3.72529e-09, 0, 1, 0, 0, 0 )

[node name="fps" type="Camera" parent="Player"]
transform = Transform( -0.111851, 0, -0.993725, 0, 1, 0, 0.993725, 0, -0.111851, 1.41946, 3.52758, 0.210223 )

[node name="Camera2" type="Camera" parent="Player"]
transform = Transform( -1, 2.79397e-09, 7.07805e-08, 2.05254e-08, 0.972048, 0.234783, -7.07805e-08, 0.234783, -0.972048, 1.35608, 4.19914, -3.74139 )

[node name="behand" type="Camera" parent="Player"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.10703, -1.62706 )
current = true
far = 8192.0

[node name="treeSceneRoot" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -35.9343, 0.39092, 18 )

[node name="StaticBody" type="StaticBody" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite3D" type="Sprite3D" parent="StaticBody"]
transform = Transform( 20, 0, 0, 0, -8.74228e-07, -20, 0, 20, -8.74228e-07, 0, 0, 0 )
texture = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 10 )

[node name="win" parent="." instance=ExtResource( 10 )]
visible = false

[node name="pixiv" type="Sprite3D" parent="."]
pause_mode = 2
transform = Transform( -0.468478, 0, 0.174723, 0, 0.5, 0, -0.174723, 0, -0.468478, 5.10519, 1.25491, 17.2188 )
visible = false
texture = ExtResource( 12 )

[node name="Game_over_root" parent="." instance=ExtResource( 19 )]
visible = false

[node name="score_root" parent="." instance=ExtResource( 20 )]
position = Vector2( 217.293, 11.3894 )

[node name="Timer" type="Timer" parent="."]
wait_time = 600.0
autostart = true
script = ExtResource( 21 )

[node name="loli_root16" parent="." instance=ExtResource( 22 )]
transform = Transform( 20, 0, 0, 0, 20, 0, 0, 0, 20, -17.8278, 0, -29.1797 )

[node name="loli_root17" parent="." instance=ExtResource( 22 )]
transform = Transform( 4.06044, 0, 9.13853, 0, 10, 0, -9.13853, 0, 4.06044, -21.9643, 0, -0.396725 )

[node name="btn_bag" type="Button" parent="."]
margin_left = 21.1168
margin_top = 97.4584
margin_right = 111.117
margin_bottom = 158.458
custom_fonts/font = ExtResource( 37 )
text = "背包"
script = ExtResource( 24 )

[node name="bag_root" parent="." instance=ExtResource( 25 )]
visible = false

[node name="command_root" parent="." instance=ExtResource( 26 )]
visible = false

[node name="piano_root" parent="." instance=ExtResource( 27 )]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -17.2178, 0, -17.4423 )

[node name="piano_Area" type="Area" parent="piano_root"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 19.1495, 0 )
script = ExtResource( 28 )

[node name="CollisionShape" type="CollisionShape" parent="piano_root/piano_Area"]
shape = SubResource( 6 )

[node name="zhunXin_root" parent="." instance=ExtResource( 29 )]
visible = false
position = Vector2( -250, -70 )

[node name="base_block_root" parent="." instance=ExtResource( 31 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.27886, 0, -4.04603 )
visible = false

[node name="sand_root" parent="." instance=ExtResource( 33 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, -287.47, 0, 49.0272 )

[node name="up" type="Button" parent="."]
margin_left = -454.229
margin_top = 403.87
margin_right = -310.229
margin_bottom = 573.87
custom_fonts/font = ExtResource( 23 )
text = "↑"
script = ExtResource( 34 )

[node name="down" type="Button" parent="."]
margin_left = -445.4
margin_top = 693.87
margin_right = -315.4
margin_bottom = 853.87
custom_fonts/font = ExtResource( 23 )
text = "↓"
script = ExtResource( 34 )

[node name="left" type="Button" parent="."]
margin_left = -564.229
margin_top = 543.87
margin_right = -444.229
margin_bottom = 673.87
custom_fonts/font = ExtResource( 23 )
text = "←"
script = ExtResource( 34 )

[node name="right" type="Button" parent="."]
margin_left = -310.229
margin_top = 533.87
margin_right = -154.229
margin_bottom = 673.87
custom_fonts/font = ExtResource( 23 )
text = "→"
script = ExtResource( 34 )

[node name="back_to_android" type="Button" parent="."]
margin_left = -1.5817
margin_top = 6.6371
margin_right = 148.418
margin_bottom = 70.6371
custom_fonts/font = ExtResource( 37 )
text = "返回"
script = ExtResource( 34 )

[node name="grab" type="Button" parent="."]
margin_left = 1480.0
margin_top = 770.0
margin_right = 1681.0
margin_bottom = 870.0
custom_fonts/font = ExtResource( 35 )
text = "grab"
script = ExtResource( 36 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 8 )

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 38 )
autoplay = true

[node name="tinys" type="Spatial" parent="."]

[node name="newTiny" parent="tinys" groups=["tinys"] instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.0668, 0, 9.18194 )
script = ExtResource( 17 )

[node name="tiny" type="Area" parent="tinys/newTiny" groups=["tinyArea"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.17452, 0 )
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/newTiny/tiny"]
shape = SubResource( 5 )

[node name="newTiny2" parent="tinys" groups=["tinys"] instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.4855, 0, -9.6091 )
script = ExtResource( 17 )

[node name="tiny2" type="Area" parent="tinys/newTiny2" groups=["tinyArea"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.971749, 0 )
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/newTiny2/tiny2"]
shape = SubResource( 5 )

[node name="newTiny3" parent="tinys" groups=["tinys"] instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.52652, 0, 13.7869 )
script = ExtResource( 17 )

[node name="tiny3" type="Area" parent="tinys/newTiny3" groups=["tinyArea"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.985551, 0 )
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/newTiny3/tiny3"]
shape = SubResource( 5 )

[node name="newTiny4" parent="tinys" groups=["tinys"] instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.47753, 0, -15.6548 )
script = ExtResource( 17 )

[node name="tiny3" type="Area" parent="tinys/newTiny4" groups=["tinyArea"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.985551, 0 )
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/newTiny4/tiny3"]
shape = SubResource( 5 )

[node name="newTiny5" parent="tinys" groups=["tinys"] instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.34076, 0, -25.631 )
script = ExtResource( 17 )

[node name="tiny3" type="Area" parent="tinys/newTiny5" groups=["tinyArea"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.985551, 0 )
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/newTiny5/tiny3"]
shape = SubResource( 5 )

[node name="newTiny6" parent="tinys" groups=["tinys"] instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.86377, 0, -31.166 )
script = ExtResource( 17 )

[node name="tiny3" type="Area" parent="tinys/newTiny6" groups=["tinyArea"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.985551, 0 )
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/newTiny6/tiny3"]
shape = SubResource( 5 )

[node name="newTiny7" parent="tinys" groups=["tinys"] instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.3253, 0, -39.947 )
script = ExtResource( 17 )

[node name="tiny3" type="Area" parent="tinys/newTiny7" groups=["tinyArea"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.985551, 0 )
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/newTiny7/tiny3"]
shape = SubResource( 5 )

[node name="newTiny8" parent="tinys" groups=["tinys"] instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.3253, 0, -52.8452 )
script = ExtResource( 17 )

[node name="tiny3" type="Area" parent="tinys/newTiny8" groups=["tinyArea"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.985551, 0 )
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/newTiny8/tiny3"]
shape = SubResource( 5 )

[node name="newTiny9" parent="tinys" groups=["tinys"] instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.8362, 0, -57.7904 )
script = ExtResource( 17 )

[node name="tiny3" type="Area" parent="tinys/newTiny9" groups=["tinyArea"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.985551, 0 )
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/newTiny9/tiny3"]
shape = SubResource( 5 )

[node name="newTiny10" parent="tinys" groups=["tinys"] instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.37895, 0, -67.5097 )
script = ExtResource( 17 )

[node name="tiny3" type="Area" parent="tinys/newTiny10" groups=["tinyArea"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.985551, 0 )
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/newTiny10/tiny3"]
shape = SubResource( 5 )

[node name="newTiny11" parent="tinys" groups=["tinys"] instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.95716, 0, -19.0605 )
script = ExtResource( 17 )

[node name="tiny3" type="Area" parent="tinys/newTiny11" groups=["tinyArea"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.985551, 0 )
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/newTiny11/tiny3"]
shape = SubResource( 5 )

[node name="newTiny12" parent="tinys" groups=["tinys"] instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.495, 0, -19.0605 )
script = ExtResource( 17 )

[node name="tiny3" type="Area" parent="tinys/newTiny12" groups=["tinyArea"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.985551, 0 )
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/newTiny12/tiny3"]
shape = SubResource( 5 )

[node name="newTiny13" parent="tinys" groups=["tinys"] instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -29.196, 0, -17.4957 )
script = ExtResource( 17 )

[node name="tiny3" type="Area" parent="tinys/newTiny13" groups=["tinyArea"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.985551, 0 )
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/newTiny13/tiny3"]
shape = SubResource( 5 )

[node name="newTiny14" parent="tinys" groups=["tinys"] instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24.8937, 0, -15.9336 )
script = ExtResource( 17 )

[node name="tiny3" type="Area" parent="tinys/newTiny14" groups=["tinyArea"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.985551, 0 )
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/newTiny14/tiny3"]
shape = SubResource( 5 )

[node name="newTiny15" parent="tinys" groups=["tinys"] instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -28.1738, 0, -14.2297 )
script = ExtResource( 17 )

[node name="tiny3" type="Area" parent="tinys/newTiny15" groups=["tinyArea"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.985551, 0 )
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/newTiny15/tiny3"]
shape = SubResource( 5 )

[node name="newTiny16" parent="tinys" groups=["tinys"] instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.54615, 0, -14.2297 )
script = ExtResource( 17 )

[node name="tiny3" type="Area" parent="tinys/newTiny16" groups=["tinyArea"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.985551, 0 )
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/newTiny16/tiny3"]
shape = SubResource( 5 )

[node name="newTiny17" parent="tinys" groups=["tinys"] instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.34315, 0, -14.2297 )
script = ExtResource( 17 )

[node name="tiny3" type="Area" parent="tinys/newTiny17" groups=["tinyArea"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.985551, 0 )
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/newTiny17/tiny3"]
shape = SubResource( 5 )

[node name="loli_root" parent="tinys" instance=ExtResource( 22 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.09991, 0, -9.34885 )

[node name="tiny4" type="Area" parent="tinys/loli_root"]
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/loli_root/tiny4"]
shape = SubResource( 5 )

[node name="loli_root2" parent="tinys" instance=ExtResource( 22 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.40021, 0, -9.34885 )

[node name="tiny4" type="Area" parent="tinys/loli_root2"]
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/loli_root2/tiny4"]
shape = SubResource( 5 )

[node name="loli_root3" parent="tinys" instance=ExtResource( 22 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0194581, 0, -9.34885 )

[node name="tiny4" type="Area" parent="tinys/loli_root3"]
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/loli_root3/tiny4"]
shape = SubResource( 5 )

[node name="loli_root4" parent="tinys" instance=ExtResource( 22 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.0168, 0, -9.34885 )

[node name="tiny4" type="Area" parent="tinys/loli_root4"]
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/loli_root4/tiny4"]
shape = SubResource( 5 )

[node name="loli_root5" parent="tinys" instance=ExtResource( 22 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.77944, 0, -9.34885 )

[node name="tiny4" type="Area" parent="tinys/loli_root5"]
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/loli_root5/tiny4"]
shape = SubResource( 5 )

[node name="loli_root6" parent="tinys" instance=ExtResource( 22 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.34208, 0, -9.34885 )

[node name="tiny4" type="Area" parent="tinys/loli_root6"]
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/loli_root6/tiny4"]
shape = SubResource( 5 )

[node name="loli_root7" parent="tinys" instance=ExtResource( 22 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.7391, 0, -9.34885 )

[node name="tiny4" type="Area" parent="tinys/loli_root7"]
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/loli_root7/tiny4"]
shape = SubResource( 5 )

[node name="loli_root8" parent="tinys" instance=ExtResource( 22 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.98725, 0, -9.34885 )

[node name="tiny4" type="Area" parent="tinys/loli_root8"]
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/loli_root8/tiny4"]
shape = SubResource( 5 )

[node name="loli_root9" parent="tinys" instance=ExtResource( 22 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.4605, 0, -9.34885 )

[node name="tiny4" type="Area" parent="tinys/loli_root9"]
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/loli_root9/tiny4"]
shape = SubResource( 5 )

[node name="loli_root10" parent="tinys" instance=ExtResource( 22 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.8678, 0, -9.34885 )

[node name="tiny4" type="Area" parent="tinys/loli_root10"]
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/loli_root10/tiny4"]
shape = SubResource( 5 )

[node name="loli_root11" parent="tinys" instance=ExtResource( 22 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.58, 0, -9.34885 )

[node name="tiny4" type="Area" parent="tinys/loli_root11"]
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/loli_root11/tiny4"]
shape = SubResource( 5 )

[node name="loli_root12" parent="tinys" instance=ExtResource( 22 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.5344, 0, -9.34885 )

[node name="tiny4" type="Area" parent="tinys/loli_root12"]
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/loli_root12/tiny4"]
shape = SubResource( 5 )

[node name="loli_root13" parent="tinys" instance=ExtResource( 22 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.624, 0, -9.34885 )

[node name="tiny4" type="Area" parent="tinys/loli_root13"]
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/loli_root13/tiny4"]
shape = SubResource( 5 )

[node name="loli_root14" parent="tinys" instance=ExtResource( 22 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15.6552, 0, -9.34885 )

[node name="tiny4" type="Area" parent="tinys/loli_root14"]
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="tinys/loli_root14/tiny4"]
shape = SubResource( 5 )

[node name="buildings" type="Spatial" parent="."]

[node name="city_root" parent="buildings" instance=ExtResource( 30 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.55145, 0, 0 )
visible = false

[node name="city_root2" parent="buildings" instance=ExtResource( 30 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.07217, 0, 0 )
visible = false

[node name="city_root3" parent="buildings" instance=ExtResource( 30 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, -12.4842, 2.41858, 28.8305 )

[node name="city_root4" parent="buildings" instance=ExtResource( 30 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15.8536, 0, 0 )
visible = false

[node name="building" parent="buildings" instance=ExtResource( 32 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 29.9072, -0.84846, 10.2974 )

[node name="building2" parent="buildings" instance=ExtResource( 32 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.0928, 0.15154, 8.5755 )

[node name="building3" parent="buildings" instance=ExtResource( 32 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.5223, 3.15154, 15.5755 )

[node name="building4" parent="buildings" instance=ExtResource( 32 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.5223, 3.15154, 11.4209 )

[node name="building5" parent="buildings" instance=ExtResource( 32 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.6246, 0.15154, 11.4209 )

[node name="building6" parent="buildings" instance=ExtResource( 32 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.6246, -0.84846, 5.84924 )

[node name="building7" parent="buildings" instance=ExtResource( 32 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6246, 0.15154, -2.37711 )

[node name="building8" parent="buildings" instance=ExtResource( 32 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6246, -0.0261962, -5.9044 )

[node name="building9" parent="buildings" instance=ExtResource( 32 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6246, 0.15154, -9.99625 )

[node name="building10" parent="buildings" instance=ExtResource( 32 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.6246, 0.15154, -13.5804 )

[node name="building11" parent="buildings" instance=ExtResource( 32 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.6246, 0.15154, -20.8932 )

[node name="building13" parent="buildings" instance=ExtResource( 32 )]
transform = Transform( 10, 0, 0, 0, 9.89109, 1.47185, 0, -1.47185, 9.89109, -247.234, 8.16854, 34.2236 )

[connection signal="timeout" from="Timer" to="Timer" method="_on_Timer_timeout"]
[connection signal="pressed" from="btn_bag" to="btn_bag" method="_on_btn_bag_pressed"]
[connection signal="area_entered" from="piano_root/piano_Area" to="piano_root/piano_Area" method="_on_piano_Area_area_entered"]
[connection signal="area_exited" from="piano_root/piano_Area" to="piano_root/piano_Area" method="_on_piano_Area_area_exited"]
[connection signal="pressed" from="back_to_android" to="back_to_android" method="_on_back_to_android_pressed"]
[connection signal="pressed" from="grab" to="grab" method="_on_grab_pressed"]
[connection signal="area_entered" from="tinys/newTiny/tiny" to="tinys/newTiny/tiny" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/newTiny2/tiny2" to="tinys/newTiny2/tiny2" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/newTiny3/tiny3" to="tinys/newTiny3/tiny3" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/newTiny4/tiny3" to="tinys/newTiny4/tiny3" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/newTiny5/tiny3" to="tinys/newTiny5/tiny3" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/newTiny6/tiny3" to="tinys/newTiny6/tiny3" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/newTiny7/tiny3" to="tinys/newTiny7/tiny3" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/newTiny8/tiny3" to="tinys/newTiny8/tiny3" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/newTiny9/tiny3" to="tinys/newTiny9/tiny3" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/newTiny10/tiny3" to="tinys/newTiny10/tiny3" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/newTiny11/tiny3" to="tinys/newTiny11/tiny3" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/newTiny12/tiny3" to="tinys/newTiny12/tiny3" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/newTiny13/tiny3" to="tinys/newTiny13/tiny3" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/newTiny14/tiny3" to="tinys/newTiny14/tiny3" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/newTiny15/tiny3" to="tinys/newTiny15/tiny3" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/newTiny16/tiny3" to="tinys/newTiny16/tiny3" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/newTiny17/tiny3" to="tinys/newTiny17/tiny3" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/loli_root/tiny4" to="tinys/loli_root/tiny4" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/loli_root2/tiny4" to="tinys/loli_root2/tiny4" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/loli_root3/tiny4" to="tinys/loli_root3/tiny4" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/loli_root4/tiny4" to="tinys/loli_root4/tiny4" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/loli_root5/tiny4" to="tinys/loli_root5/tiny4" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/loli_root6/tiny4" to="tinys/loli_root6/tiny4" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/loli_root7/tiny4" to="tinys/loli_root7/tiny4" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/loli_root8/tiny4" to="tinys/loli_root8/tiny4" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/loli_root9/tiny4" to="tinys/loli_root9/tiny4" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/loli_root10/tiny4" to="tinys/loli_root10/tiny4" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/loli_root11/tiny4" to="tinys/loli_root11/tiny4" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/loli_root12/tiny4" to="tinys/loli_root12/tiny4" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/loli_root13/tiny4" to="tinys/loli_root13/tiny4" method="_on_Area_area_entered"]
[connection signal="area_entered" from="tinys/loli_root14/tiny4" to="tinys/loli_root14/tiny4" method="_on_Area_area_entered"]
